--- a/06/6.05/index.html
+++ b/06/6.05/index.html
@@ -3,13 +3,18 @@
 <head>
     <meta charset="utf-8">
     <meta name="description" content="">
-    <title>6.5 - Event listeners and handlers in D3</title>
+    <title>6.7 - Adding a jQuery UI slider</title>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <!-- jQuery UI CSS -->
+    <link rel="stylesheet" href="css/jquery-ui.min.css">
+    <link rel="stylesheet" href="css/jquery-ui.structure.min.css">
+    <link rel="stylesheet" href="css/jquery-ui.theme.min.css">
     <!-- D3 Tooltip CSS -->
     <link rel="stylesheet" href="css/d3-tip.css">
     <!-- Custom styling -->
     <link rel="stylesheet" href="css/style.css">
+    <link href='http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -25,6 +30,10 @@
             <div class="col-md-6">
                 <button id="play-button" class="btn btn-primary">Play</button>
                 <button id="reset-button" class="btn btn-primary">Reset</button>
+                <div id="slider-div">
+                    <label>Year: <span id="year">1800</span></label>
+                    <div id="date-slider"></div>
+                </div>
             </div>
             <div class="col-md-6">
                 <select id="continent-select" class="form-control">
@@ -45,6 +54,7 @@
 
 <!-- External JS libraries -->
 <script src="js/jquery.min.js"></script>
+<script src="js/jquery-ui.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/d3.min.js"></script>
 <script src="js/d3-tip.js"></script>
