Finished working on the final subproject.

--- a/10/10.02/index.html
+++ b/10/10.02/index.html
@@ -31,15 +31,6 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <select id="coin-select" class="form-control">
-                        <option selected value="bitcoin">Bitcoin</option>
-                        <option value="ethereum">Ethereum</option>
-                        <option value="bitcoin_cash">Bitcoin Cash</option>
-                        <option value="litecoin">Litecoin</option>
-                        <option value="ripple">Ripple</option>
-                    </select>
-                </div>
-                <div class="col-md-4">
                     <select id="var-select" class="form-control">
                         <option selected value="price_usd">Price in dollars</option>
                         <option value="market_cap">Market capitalization</option>
@@ -48,7 +39,11 @@
                 </div>
             </div>
             <div class="row">
-                <div id="chart-area"></div>  
+                <div class="col-md-4" id="chart-area1"></div>
+                <div class="col-md-4" id="chart-area2"></div>
+                <div class="col-md-4" id="chart-area3"></div>
+                <div class="col-md-4" id="chart-area4"></div>
+                <div class="col-md-4" id="chart-area5"></div>
             </div>
         </div>
 
