--- a/10/10.04/index.html
+++ b/10/10.04/index.html
@@ -54,6 +54,7 @@
     <script src="js/d3.min.js"></script>
     <!-- Custom JS -->
     <script src="js/lineChart.js"></script>
+    <script src="js/donutChart.js"></script>
     <script src="js/main.js"></script>
 
     </body>
